Aprimorando o método 'solicitandoViagem', enum: 'UsuarioStatus', e método 'findByUsuarioStatus' em UsuarioRepository